# qt-design-patterns

./: .gitignore  CMakeLists.txt  README.md  design-patterns.pro  factory.h  main.cpp  prototype.h  singleton.cpp  singleton.h  smartfactory.cpp  smartfactory.h  strategy.h
doc/: Doxyfile  build_doxygen.sh
doc/RAII/: Qt-Smart-Pointer.md
